force-app/main/default/objects/Product2/fields/Company_Tag__c.field-meta.xml
<CustomField>
    <fullName>Company_Tag__c</fullName>
    <label>Company Tag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>