force-app/main/default/objects/Product2/fields/ContentDocId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocId__c</fullName>
    <label>ContentDocId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>