force-app/main/default/objects/Product2/fields/GYNCF_Average_Rating__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Average_Rating__c</fullName>
    <label>Overall Rating</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>