force-app/main/default/objects/Product2/fields/GYNCF_ImageDoc__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_ImageDoc__c</fullName>
    <label>GYNCF_ImageDoc</label>
    <length>18</length>
    <type>Text</type>
</CustomField>