force-app/main/default/objects/Product2/fields/GYNCF_MaterialType__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_MaterialType__c</fullName>
    <label>MaterialType</label>
    <length>4</length>
    <type>Text</type>
</CustomField>