force-app/main/default/objects/Product2/fields/GYNCF_Price__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Price__c</fullName>
    <label>Price</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>