force-app/main/default/objects/Product2/fields/GYNCF_Source__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Source__c</fullName>
    <label>Source</label>
    <length>250</length>
    <type>Text</type>
</CustomField>