force-app/main/default/objects/Product2/fields/GYNCF_Tags__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Tags__c</fullName>
    <label>Tags</label>
    <type>TextArea</type>
</CustomField>