force-app/main/default/objects/Product2/fields/GYNF_Availability__c.field-meta.xml
<CustomField>
    <fullName>GYNF_Availability__c</fullName>
    <label>Availability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>