force-app/main/default/objects/Product2/fields/Prod_Image__c.field-meta.xml
<CustomField>
    <fullName>Prod_Image__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot; + ContentDocId__c , &apos;not displaying&apos;,240,320)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod_Image</label>
    <type>Text</type>
</CustomField>