force-app/main/default/objects/Product2/fields/ZZATIDEMO__c.field-meta.xml
<CustomField>
    <fullName>ZZATIDEMO__c</fullName>
    <label>ZZATIDEMO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>