force-app/main/default/objects/Product2/fields/ZZLASTRUNDATE__c.field-meta.xml
<CustomField>
    <fullName>ZZLASTRUNDATE__c</fullName>
    <label>ZZLASTRUNDATE</label>
    <type>Date</type>
</CustomField>