force-app/main/default/objects/Product2/fields/ZZSFDCDEMO__c.field-meta.xml
<CustomField>
    <fullName>ZZSFDCDEMO__c</fullName>
    <label>ZZSFDCDEMO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>